tests/paczka1/fuzzy1/15962356.err
Error in line 29: A604 A831 41,3
Error in line 30: A604 S481 93,4
Error in line 38: ZN5i6BAfi A604 47,1
Error in line 39: ZN5i6BAfi A831 50,7
